imagenes mas claras

--- a/informe.tex
+++ b/informe.tex
@@ -102,7 +102,10 @@ A  =
 \end{flushleft}
 $\bullet$ Se pudo ver que el m\'aximo cociente entre el valor de la heur\'istica del vecino m\'as cercano y el \'optimo se da en la instancia $2$. El gr\'afico siguiente muestra primero el tour \'optimo calculado por Concorde y luego se muestra el tour calculado por la heur\'istica. \\
 \begin{center}
-\includegraphics[scale=0.5]{instancia2TourOptTourVMC.jpg}
+\includegraphics[scale=0.3]{instancia2TourOpt.jpg}
+\end{center}
+\begin{center}
+\includegraphics[scale=0.4]{instancia2TourVMC.jpg}
 \end{center}
 \ \\\\\\\\
 $\bullet$ De acuerdo a los valores promedios provistos por la tabla y los valores promedios brindados por el libro de Cook, se puede ver que hay una escasa diferencia entre ellos:
@@ -113,7 +116,7 @@ $\bullet$ De acuerdo a los valores promedios provistos por la tabla y los valore
 Heuristica & Tabla & Libro Cook\\
 \hline
 Vecino M\'as Cercano & $1.24\times OPT$ & $1.26\times OPT$\\
-Insercion M\'as Lejana & $1.09\times OPT$ & $1.16\times OPT$\\
+Insercion M\'as Lejana & $1.10\times OPT$ & $1.16\times OPT$\\
 Cota $1$-\'arbol & $0.88\times OPT$ & $0.90 \times OPT$\\ 
 \hline
 \end{tabular}
